Add /snapshots enpoint and refactor code to allow search in status by user_id and session_id
